--- a/src/main/resources/styles.css
+++ b/src/main/resources/styles.css
@@ -8,6 +8,11 @@
     -fx-padding: 10 20;
 
 }
+.border{
+    -fx-border-color: #f2e6e3;
+    -fx-border-width: 1px;
+    -fx-border-radius: 5px;
+}
 .button:hover{
     -fx-text-fill: #f2e6e3;
     -fx-background-color: #ffbb6c;
