--- a/src/main/resources/stylesheets/styles.css
+++ b/src/main/resources/stylesheets/styles.css
@@ -54,7 +54,26 @@ StackPane {
 
     -fx-font-family: "Arial", sans-serif;
 }
+.my-combo-box {
+    -fx-font-size: 18px;
+    -fx-font-family: "Arial";
+    -fx-background-color: #f4f0eb;
+    -fx-border-radius: 5;
+    -fx-padding: 5;
 
+}
+
+.my-combo-box .list-cell {
+    -fx-padding: 5px;
+}
+.my-combo-box .arrow{
+    -fx-background-color: #ffbb6c;
+
+}
+
+.my-combo-box .cell:hover {
+    -fx-background-color: #ffbb6c;
+}
 /*
 .button {
     -fx-background-color: #b97d6d;
