streamline use of css

--- a/src/main/resources/stylesheets/popupStyles.css
+++ b/src/main/resources/stylesheets/popupStyles.css
@@ -4,6 +4,7 @@
     -fx-border-radius: 5px;
 }
 
+/* Style for the content in the popup */
 .content {
     -fx-background-color: transparent;
     -fx-border-color: #503c52;
@@ -27,27 +28,16 @@
     -fx-text-fill: #503c52;
 }
 
+/*
+The styles for the heading in the application.
+
+ */
 .heading {
     -fx-font-size: 3em;
     -fx-font-family: Georgia;
     -fx-font-weight: bold;
     -fx-background-color: transparent;
     -fx-text-fill: #503c52;
-}
-
-.button {
-    -fx-background-color: #f2e6e3;
-    -fx-font-size: 1.5em;
-    -fx-padding: 10 20;
-}
-
-.button:hover {
-    -fx-text-fill: #f2e6e3;
-    -fx-background-color: #ffbb6c;
-    -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.6), 10, 0, 0, 0);
-    -fx-scale-x: 1.05;
-    -fx-scale-y: 1.05;
-
 }
 
 /* Style for the text fields in the popup */
@@ -61,16 +51,18 @@
     /* -fx-padding: 10 20;*/
 }
 
+/*
+The styles for the buttons in the popup
+ */
 .edit-popup .button {
     -fx-padding: 5 10
 }
-.button:focused{
-    -fx-border-color: #9f6c66 ;
-    -fx-border-width: 3px ;
-    -fx-text-fill: #9f6c66;
-    -fx-border-radius: 5px;
-}
-.user-manual-title{
+
+/*
+The styles for the user manual title
+
+ */
+.user-manual-title {
     -fx-font-size: 2em;
     -fx-font-family: Georgia;
     -fx-background-color: transparent;
